added two extra 'n's to the comment at the top lol

--- a/Ingredient Scanner/build.gradle
+++ b/Ingredient Scanner/build.gradle
@@ -1,20 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 15
     buildToolsVersion "23.0.2"
-
     defaultConfig {
         applicationId "edu.sfsu.cs.orange.ocr"
-        minSdkVersion 8
-        targetSdkVersion 10
+        minSdkVersion 15
+        targetSdkVersion 15  //changed to 15
     }
-
     buildTypes {
         release {
             minifyEnabled true
             proguardFiles 'proguard.cfg'
         }
+    }
+    productFlavors {
     }
 }
 
